# groundmodels

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: convert_example.rs
groundmodels-cli/: Cargo.toml
groundmodels-cli/src/: lsp.rs  main.rs
groundmodels-core/: Cargo.toml
groundmodels-core/examples/: convert_example.rs
groundmodels-core/src/: agsi.rs  lib.rs  soil_description.rs  soil_description_tests.rs  strip_log.rs
groundmodels-py/: Cargo.toml  README.md  pyproject.toml
groundmodels-py/python/groundmodels_py/: __init__.py
groundmodels-py/src/: lib.rs
scripts/: release.nu
src/: AGSi_JSONSchema_v1-0-1_2020-12.json  agsi.rs  lib.rs
