[workspace]
members = [
    "groundmodels-core",
    "groundmodels-cli", 
    "groundmodels-py"
]
resolver = "2"

[workspace.package]
version = "2026.52.5"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/groundmodels"
description = "A library for geotechnical ground modeling and soil parameter analysis"

[workspace.dependencies]
groundmodels-core = { path = "./groundmodels-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-build-config = "0.22"